Freedom Sanbox Ant Deploy/src/objects/Percentage__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This will store all the percentage value required into the KPI reports</description>
    <fields>
        <fullName>Client_Referral__c</fullName>
        <label>Client Referral</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConversionratesWithMeetingFix__c</fullName>
        <label>ConversionratesWithMeetingFixed</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConversionratesforLeadconverted__c</fullName>
        <label>ConversionratesforLeadconverted</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExecutionsPercent__c</fullName>
        <label>ExecutionsPercent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executions__c</fullName>
        <label>Executions</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadConversionPercent__c</fullName>
        <label>LeadConversionPercent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadMeetingFixedPercent__c</fullName>
        <label>LeadMeetingFixedPercent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Entities__c</fullName>
        <label>New Entities</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoOfEntities__c</fullName>
        <label>NoOfEntities</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Approval_Duration__c</fullName>
        <label>Plan Approval Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestimonialPercent__c</fullName>
        <label>TestimonialPercent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Testimonial__c</fullName>
        <label>Testimonial</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PercentageAssigned</label>
</CustomObject>